<resources>
    <string name="app_name">Nmedia</string>
    <string name="text">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="likes">Likes</string>
    <string name="shares">Shares</string>
    <string name="views">Views</string>
    <string name="likes_value" translatable="false">100</string>
    <string name="shares_value" translatable="false">2</string>
    <string name="views_value" translatable="false">3000</string>
    <string name="description_post_like">Like</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>